--- a/private/README
+++ b/private/README
@@ -1,5 +1,8 @@
-This folder contains MATLAB components needed by modified versions of MATLAB
-toolbox functions. The exact files depend on the MATLAB version in use.
+This folder contains external dependencies needed by the yalebox programs. These
+include:
+
+(1) MATLAB components needed by modified versions of MATLAB toolbox functions.
+The exact files depend on the MATLAB version in use.
 
 MATLAB R2014b Linux 64-bit:
   imhistc.mexa64
@@ -8,3 +11,13 @@ MATLAB R2014b Linux 64-bit:
 MATLAB R2014a Linux 64 bit:
   imhistc.mexa64
   grayxform.mexa64
+
+(2) DCT-PLS (Discrete Cosine Transform - Penalized Least Squares) PIV
+post-processing tools. See: Garcia, D. (2010). A fast all-in-one method for
+automated post-processing of PIV data. Experiments in Fluids, 50(5), 1247?1259.
+doi:10.1007/s00348-010-0985-y.
+
+pppiv.m
+smoothn.m
+dctn.m
+idctn.m
