First implementation of smoothing splines in tension for interp
Also uses pppiv PLS routine with a fixed smoothness factor for smoothing. A
least-squares solution should allow me to avoid this added dependency in the
future.

The results are promising - the upper edge has a clear bias, but the interior
of the wedge looks quit nice...

--- a/private/README
+++ b/private/README
@@ -21,3 +21,5 @@ derivativesByFilter.m
 equation (by John D'Errico, by way of the MATLAB file exchange).
 
 inpaint_nans.m
+
+(4) spline2d from Wessel & Bercovici 1998 tspline MATLAB package
