Experimented with new approach to modeling errors in test script
When struggling with how to "window" the data when producing a "functional
box plot", I realized that it is much more straight forward to discuss the
conditional CDF P(error | distance to shear center). This can be estimated
with kernels, with the usual caveats about bandwidth. I found a reasonable
adaptive bandwidth method to fit the joint PDF P(error, dist), then
numerically integrate and divide to get the marginal, conditonal, and
finally the conditional CDF.

This all works (seemingly) well. Next comes the plotting.

--- a/depend/README
+++ b/depend/README
@@ -23,3 +23,7 @@ equation (by John D'Errico, by way of the MATLAB file exchange).
 inpaint_nans.m
 
 (4) spline2d from Wessel & Bercovici 1998 tspline MATLAB package
+
+(5) akde from Botev, Z. I., Grotowski, J. F., & Kroese, D. P. (2010). Kernel
+density estimation via diffusion. Annals of Statistics, 38(5), 2916–2957.
+http://doi.org/10.1214/10-AOS799. Downloaded from Mathworks FileExchange.
