Updates post_series to write MAT-file output

--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
 + spline2 requires MEX file be built, how to make this easier?
++ update testing function
++ all parameter files and output files should contain a global notes field
+
+
+
