--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
-+ flatten post parameter file
-
++ use allocate() utility when creating output files...
 + update prep_series interface to use new manual masking input
-
 + all parameter files and output files should contain a global notes field
 + find decent parameters for 01 siden (and testcase 00)
 + create/update post series check script
